-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0
-
None
-
68ad02560 (master)
#0 QArrayDataPointer<std::variant<std::monostate, Utils::NameValueDictionary, std::tuple<QString, QString, bool>, std::tuple<QString, QString>, QString, std::tuple<QString, QString, Utils::Environment::PathSeparator>, std::tuple<QString, QString, Utils::Environment::PathSeparator>, QList<Utils::EnvironmentItem>, std::monostate, Utils::FilePath> >::QArrayDataPointer () at /home/tjmaciei/obj/qt/installed/include/QtCore/qarraydatapointer.h:38 #1 QList<std::variant<std::monostate, Utils::NameValueDictionary, std::tuple<QString, QString, bool>, std::tuple<QString, QString>, QString, std::tuple<QString, QString, Utils::Environment::PathSeparator>, std::tuple<QString, QString, Utils::Environment::PathSeparator>, QList<Utils::EnvironmentItem>, std::monostate, Utils::FilePath> >::QList () at /home/tjmaciei/obj/qt/installed/include/QtCore/qlist.h:76 #2 Utils::Environment::Environment () at /home/tjmaciei/src/qt/qt-creator/src/libs/utils/environment.h:22 #3 ProjectExplorer::BuildConfiguration::environment () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:724 #4 0x00007f1a3bfacefc in MesonProjectManager::Internal::MesonBuildSystem::MesonBuildSystem () at /home/tjmaciei/src/qt/qt-creator/src/plugins/mesonprojectmanager/mesonbuildsystem.cpp:202 #5 0x00007f1a3bfb7181 in ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}::operator()(ProjectExplorer::BuildConfiguration*) const () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/project.h:246 #6 std::__invoke_impl<MesonProjectManager::Internal::MesonBuildSystem*, ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}&, ProjectExplorer::BuildConfiguration*>(std::__invoke_other, ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}&, ProjectExplorer::BuildConfiguration*&&) () at /usr/include/c++/14/bits/invoke.h:61 #7 std::__invoke_r<ProjectExplorer::BuildSystem*, ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}&, ProjectExplorer::BuildConfiguration*>(ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}&, ProjectExplorer::BuildConfiguration*&&) () at /usr/include/c++/14/bits/invoke.h:114 #8 std::_Function_handler<ProjectExplorer::BuildSystem* (ProjectExplorer::BuildConfiguration*), ProjectExplorer::Project::setBuildSystemCreator<MesonProjectManager::Internal::MesonBuildSystem>()::{lambda(ProjectExplorer::BuildConfiguration*)#1}>::_M_invoke(std::_Any_data const&, ProjectExplorer::BuildConfiguration*&&) () at /usr/include/c++/14/bits/std_function.h:290 #9 0x00007f1a3f3b4d53 in std::function<ProjectExplorer::BuildSystem* (ProjectExplorer::BuildConfiguration*)>::operator()(ProjectExplorer::BuildConfiguration*) const () at /usr/include/c++/14/bits/std_function.h:591 #10 ProjectExplorer::Project::createBuildSystem () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/project.cpp:262 #11 ProjectExplorer::Internal::BuildConfigurationPrivate::BuildConfigurationPrivate () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:147 #12 ProjectExplorer::BuildConfiguration::BuildConfiguration () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:182 #13 0x00007f1a3bfa678a in MesonProjectManager::Internal::MesonBuildConfiguration::MesonBuildConfiguration () at /home/tjmaciei/src/qt/qt-creator/src/plugins/mesonprojectmanager/mesonbuildconfiguration.cpp:70 #14 ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}::operator()(ProjectExplorer::Target*) const () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/buildconfiguration.h:202 #15 std::__invoke_impl<MesonProjectManager::Internal::MesonBuildConfiguration*, ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*>(std::__invoke_other, ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*&&) () at /usr/include/c++/14/bits/invoke.h:61 #16 std::__invoke_r<ProjectExplorer::BuildConfiguration*, ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*>(ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*&&) () at /usr/include/c++/14/bits/invoke.h:114 #17 std::_Function_handler<ProjectExplorer::BuildConfiguration* (ProjectExplorer::Target*), ProjectExplorer::BuildConfigurationFactory::registerBuildConfiguration<MesonProjectManager::Internal::MesonBuildConfiguration>(Utils::Id)::{lambda(ProjectExplorer::Target*)#1}>::_M_invoke(std::_Any_data const&, ProjectExplorer::Target*&&) () at /usr/include/c++/14/bits/std_function.h:290 #18 0x00007f1a3f3bd900 in std::function<ProjectExplorer::BuildConfiguration* (ProjectExplorer::Target*)>::operator()(ProjectExplorer::Target*) const () at /usr/include/c++/14/bits/std_function.h:591 #19 ProjectExplorer::BuildConfigurationFactory::restore () at /home/tjmaciei/src/qt/qt-creator/src/plugins/projectexplorer/buildconfiguration.cpp:1058
Loading https://github.com/opendcdiag/opendcdiag.
Problem introduced between e218d37373471e4578c746f5d75edb9822c23793 and 227d196291e28cb2aea2878d44090866a4983d91.
For Gerrit Dashboard: QTCREATORBUG-32593 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
629732,2 | ProjectExplorer: Create BuildSystem after BuildConfigurationPrivate | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |