ProjectExplorer: Create BuildSystem after BuildConfigurationPrivate

E.g. MesonBuildSystem calls back on the BuildConfiguration in its
constructor, thus requiring the d-pointer to be set up at this point.

Fixes: QTCREATORBUG-32593
Change-Id: I023422c13a60e2e26148c22a753cf0339afddf39
Reviewed-by: hjk <hjk@qt.io>